maze.lessons.maze.island.IslandMaze.scala.error
Escaper:9: error: Unit does not take parameters
                       avance()} ; keepHandOnSideWall();
                                                     ^